Refactor remaining SDG test classes to run on Java 16.
Resolves gh-497.